[package]
name = "stellar-history-archive-hasher"
version = "0.8.1"
edition = "2021"
authors = [
    "Pieterjan84 <pieterjan@stellarbeat.io>",
    "Tillman Mosley III <tillman@withobsrvr.com>",
]
description = "WASM library for hashing Stellar transaction history archive entries"
repository = "https://github.com/withobsrvr/rs-stellar-history-archive-hasher"
license = "MIT"
homepage = "https://withobsrvr.com"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.83"
js-sys = "0.3.60"
console_error_panic_hook = { version = "0.1.6", optional = true }
stellar-xdr = { version = "26.0.0", features=['base64', 'std'] }
sha2 = "0.10.6"
base64 = "0.13.1"

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
